RESOLVED FIXED135032
REGRESSION (r171167): LoaderClient processDidCrash call is made after load state changes
https://bugs.webkit.org/show_bug.cgi?id=135032
Summary REGRESSION (r171167): LoaderClient processDidCrash call is made after load st...
Alexey Proskuryakov
Reported 2014-07-17 16:50:56 PDT
Loader client can no longer see what the page load state was, because it's now reset earlier. <rdar://problem/17716602>
Attachments
proposed fix (1.92 KB, patch)
2014-07-17 16:53 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2014-07-17 16:53:19 PDT
Created attachment 235100 [details] proposed fix
WebKit Commit Bot
Comment 2 2014-07-17 19:16:22 PDT
Comment on attachment 235100 [details] proposed fix Clearing flags on attachment: 235100 Committed r171211: <http://trac.webkit.org/changeset/171211>
WebKit Commit Bot
Comment 3 2014-07-17 19:16:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.