REGRESSION (r171167): LoaderClient processDidCrash call is made after load state changes https://bugs.webkit.org/show_bug.cgi?id=135032 <rdar://problem/17716602>

Reviewed by Dan Bernstein.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::processDidCrash): Create a transaction, so that the nested
transaction in resetStateAfterProcessExited() wouldn't be committed.
(WebKit::WebPageProxy::resetStateAfterProcessExited): Don't use auto - it was hiding
the most important fact that this is a stack object that can't be simply moved to
a different function.


Canonical link: https://commits.webkit.org/152952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171211 268f45cc-cd09-0410-ab3c-d52691b4dbfc